# butcher

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
butcher/: __main__.py  common_types.py  data.py  utils.py
butcher/codegen/: manager.py
butcher/codegen/generators/: annotation.py  bases.py  pythonize.py  reference.py  text.py
butcher/codegen/transformers/: bot.py  enums.py  init.py  methods.py  types.py
butcher/codegen/visitors/: simple_entity.py
butcher/configuration/: loader.py  rule.py
butcher/configuration/models/: project.py
butcher/docs/: manager.py
butcher/parsers/: api_parser.py  consts.py  enum.py  rst.py
butcher/parsers/entities/: entity_type.py  generator.py
butcher/parsers/entities/resolvers/: aliases.py  annotation_type.py  base.py  base_class.py  can_be_used_in_webhook.py  const.py  extend.py  replace.py  reserved_names.py  returning_type.py
butcher/rules/: engine.py  registry.py  schema.py
butcher/rules/actions/: annotations.py  basic.py
butcher/shell/: config.py  main.py
butcher/shell/commands/: apply.py  parse.py  refresh.py
